HOTFIX: um in java 8 eine Funktionierende jar Datei zu packen